error fixing and styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="calculator">
         <div class="calculator__panel">
-            <button class="calc_button" id="clear">C</button>
+            <button class="calc_button_c" id="clear">C</button>
             <p id="calc_panel" class="calc_pan"></p>
         </div>
         <div class="calculator__butons_container">
